<resources>

    <style name="myToast">
        <item name="android:textSize">14sp</item>
    </style>

    <!-- 系统签名 android:sharedUserId="android.uid.system" -->
    <string name="sharedUserId" translatable="false">android.uid.system</string>

    <string name="ac_temperature">%.0f°C</string>
    <string name="app_name" translatable="false">shihuademo</string>
    <!--    <string name="app_name">ToastCarToastTest</string>-->
    <!--    <string name="app_name">LocationTest</string>-->
    <string name="accessibility_label" translatable="false">shihuademo</string>
    <string name="gac_font" translatable="false">GacFont</string>
    <string name="gac_font_medium" translatable="false">GacFont-Medium</string>
    <string name="gac_font_bold" translatable="false">GacFont-Bold</string>
    <string name="gac_font_light" translatable="false">GacFont-Light</string>
    <string name="gac_font_regular" translatable="false">GacFont-Regular</string>
    <string name="AIONType" translatable="false">AIONType</string>
    <string name="roboto" translatable="false">Roboto</string>
    <string name="roboto_bold" translatable="false">Roboto-Bold</string>
    <string name="AIONType_bold" translatable="false">AIONType-bold</string>
    <string name="AIONType_regular" translatable="false">AIONType-regular</string>
    <string name="AIONType_light" translatable="false">AIONType-light</string>
    <string name="FZVariable_YouHeiJ" translatable="false">FZVariable-YouHeiJ</string>
    <string name="SourceHanSansCN" translatable="false">SourceHanSansCN</string>
    <string name="SourceHanSansCN_Bold" translatable="false">SourceHanSansCN-Bold</string>
    <string name="SourceHanSansCN_Normal" translatable="false">SourceHanSansCN-Normal</string>
    <string name="SourceHanSansCN_Regular" translatable="false">SourceHanSansCN-Regular</string>
    <string name="SourceHanSansCN_Medium" translatable="false">SourceHanSansCN-Medium</string>
    <string name="ADiGO4_CH" translatable="false">ADiGO4_CH</string>
    <string name="ADiGO4_CH_Bld" translatable="false">ADiGO4_CH_Bld</string>
    <string name="ADiGO5" translatable="false">ADiGO5</string>
    <string name="ADiGO5_Bold" translatable="false">ADiGO5-Bold</string>
    <string name="source_sans_pro" translatable="false">source-sans-pro</string>
    <string name="sans_serif_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_words" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789</string>
    <string name="font_words_medium" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 medium</string>
    <string name="font_words_roboto" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 Roboto</string>
    <string name="font_style_words" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 style-bold</string>
    <string name="font_words_bold" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789</string>
    <string name="font_words_sans_serif_bold" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 sans-serif-Bold</string>
    <string name="font_words_SourceHanSansCN_style_Bold" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 SourceHanSansCN-style-Bold</string>
    <string name="font_words_GacFont_Bold" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 GacFont-Bold</string>
    <string name="font_words_GacFont_Medium" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 GacFont-Medium</string>
    <string name="font_words_GacFont_Light" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 GacFont-Light</string>
    <string name="font_words_GacFont_Regular" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 GacFont-Regular</string>
    <string name="font_words_SourceHanSansCN_Bold" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 SourceHanSansCN-Bold</string>
    <string name="font_words_SourceHanSansCN_Normal" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 SourceHanSansCN-Normal</string>
    <string name="font_words_SourceHanSansCN_Regular" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 SourceHanSansCN-Regular</string>
    <string name="font_words_SourceHanSansCN_Medium" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 SourceHanSansCN-Medium</string>
    <string name="font_words_ADiGO5_Bold" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 ADiGO5-Bold</string>
    <string name="font_words_ADiGO4_style_Bold" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 ADiGO4_CH-style-Bold</string>
    <string name="font_words_ADiGO4_CH_Bld" translatable="false">Innovation in China fiti 中国制造，惠及全球 0123456789 ADiGO4_CH_Bld</string>
    <string name="font_words_signal" translatable="false">/ * - + ! @ # $ % ^ * ( ) / : " ; [ ] { } ~ = 你好中国 fi ti</string>
    <string name="back">back</string>

    <string-array name="whitelist_pulblic_app_hide_statusbar" translatable="true">
        <item></item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>

    <string name="enable_adb1" translatable="false">USB2.0</string>
    <string name="enable_adb1_summary" translatable="false">Tips: 开启则为device模式支持adb，关闭则为host模式</string>

    <string name="enable_adb2" translatable="false">USB3.0</string>
    <string name="enable_adb2_summary" translatable="false">Tips: 默认开启，开启则为device模式支持adb，关闭则为host模式</string>

    <string name="enable_wiress_adb" translatable="false">无线调试</string>
    <string name="enable_wiress_adb_summary" translatable="false">Tips: 请先连接WIFI后，打开无线调试，端口5555</string>

    <string name="enable_ndk_switch" translatable="false">跳过NDK教学</string>
    <string name="enable_ndk_switch_summary" translatable="false">Tips: 不进入教学模式</string>
</resources>